# tread

./: .gitignore  CODE_PLAN.md  Cargo.toml  README.md  generate-screenshots.py  install.ps1  install.sh
.agents/skills/lukemelnik-agent-skills-readme/: SKILL.md
.github/workflows/: ci.yml  release.yml
assets/: demo.cast
fixtures/: sample_gbk.txt  sample_utf8.txt
scripts/: generate-asciinema.py
src/: app.rs  bookmark.rs  config.rs  main.rs  reader.rs  settings.rs  ui.rs
