[package]
name = "tread"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tread"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
unicode-width = "0.2"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
